feat: production-ready architecture with 97% test coverage
Core modules:
 - pontos/config.py - Environment configuration with .env
 - pontos/detector.py - YOLO11s vessel detection (GPU/CPU)
 - pontos/sentinel.py - Sentinel-2 L1C acquisition
 - pontos/geo.py - Geospatial utilities (GeoJSON export)
 - pontos/cli.py - Command-line interface

Testing infrastructure:
 - 40 tests passing (pytest)
 - 97% code coverage
 - pytest.ini configuration
 - tests/ comprehensive test suite

Results:
 - 10 vessels detected in Toulon
 - GeoJSON export functional
 - ROCm 7.10 GPU acceleration working
 - Sentinel-2 L1C download automated

Dependencies:
- requirements.txt updated (ultralytics, sentinelhub, pytest)
- setup.py for pip install -e .

--- a/.gitignore
+++ b/.gitignore
@@ -43,16 +43,27 @@ data/*.tiff
 data/*.tif
 data/*.png
 data/*.jpg
-!data/samples/  # Keep sample data
+!data/.gitkeep
+!data/samples/
 
 # Model outputs
 runs/
 *.pt
 !models/yolo11s_tci.pt  # Keep trained model
 
+# Detection outputs
+*.geojson
+vessels.geojson
+toulon_vessels_map.html
+
 # Jupyter
 .ipynb_checkpoints/
 *.ipynb
+
+# Coverage reports
+.coverage
+htmlcov/
+.pytest_cache/
 
 # OS
 .DS_Store
